@@ -1,3 +1,11 @@
+2012-08-13  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* compat/zlib/win64/zlib1.dll:   Add 64-bit build of zlib1.dll, and use it
+	* compat/zlib/win64/zdll.lib:    for the dynamic mingw-w64 build.
+	* win/Makefile.in
+	* win/configure.in
+	* win/configure
+
 2012-08-09  Reinhard Max  <max@suse.de>
 
 	* tests/http.test: Fix http-3.29 for machines without IPv6 support.
